esw: Vitis basic support
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 2.8.9)
 project(libxil)
 
 if (${OS_ESW})
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/common.cmake)
+set(common_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../")
+find_package(common)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/common.cmake)
 include_directories(${CMAKE_BINARY_DIR}/include)
 set(DRVLIST_DIR "${CMAKE_SOURCE_DIR}")
 find_package(DRVLIST)
@@ -19,10 +21,12 @@ FOREACH(DRIVER ${DRIVER_LIST})
         list (APPEND sources ${DRIVER}/src/${src})
     endforeach()
 ENDFOREACH()
-gen_xparams()
+#gen_xparams()
 file(COPY xparameters.h DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(xil STATIC ${sources})
 set_target_properties(xil PROPERTIES LINKER_LANGUAGE C)
+install(TARGETS xil LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
+install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..)
 else()
 include_directories(${CMAKE_BINARY_DIR}/include)
 file(COPY xparameters.h DESTINATION ${CMAKE_BINARY_DIR}/include)
