--- a/XilinxProcessorIPLib/drivers/coresightps_dcc/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/coresightps_dcc/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(coresightps_dcc)
 
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -14,4 +14,4 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(coresightps_dcc STATIC ${_sources})
 set_target_properties(coresightps_dcc PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS coresightps_dcc LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+#install(TARGETS coresightps_dcc LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
