--- a/XilinxProcessorIPLib/drivers/uartps/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/uartps/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(uartps)
 
 set(UARTPS_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -37,4 +37,4 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(uartps STATIC ${_sources})
 set_target_properties(uartps PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS uartps LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+#install(TARGETS uartps LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
