lib: bsp: vitis basic support
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/bsp/standalone/src/CMakeLists.txt
+++ b/lib/bsp/standalone/src/CMakeLists.txt
@@ -2,8 +2,9 @@
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
 message(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake)
+#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/common.cmake)
 project(xilstandalone)
 
 set(Mem_DIR "${CMAKE_SOURCE_DIR}")
@@ -21,7 +22,8 @@ foreach(val RANGE ${mem_len})
 endforeach()
 list(APPEND defs "\n#endif")
 file(WRITE ${CMAKE_SOURCE_DIR}/common/xmem_config.h ${defs})
-include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xilstandalone.cmake NO_POLICY_SCOPE)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xilstandalone.cmake NO_POLICY_SCOPE)
+include(${CMAKE_CURRENT_SOURCE_DIR}/xilstandalone.cmake NO_POLICY_SCOPE)
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 
@@ -76,4 +78,6 @@ if (${OS_ESW}
     target_compile_definitions(xilstandalone PRIVATE FREERTOS_BSP)
 endif()
 set_target_properties(xilstandalone PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS xilstandalone LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS xilstandalone LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
+install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
+install(FILES ${CMAKE_SOURCE_DIR}/common.cmake DESTINATION ${CMAKE_INCLUDE_PATH}/../../ RENAME commonConfig.cmake) 
