--- a/lib/bsp/standalone/src/common/CMakeLists.txt
+++ b/lib/bsp/standalone/src/common/CMakeLists.txt
@@ -41,7 +41,7 @@ if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR
 collect (PROJECT_LIB_SOURCES xmicroblaze_g.c)
 endif()
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53-32") OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa53") OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64") OR ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexa72"))
-collect (PROJECT_LIB_SOURCES xarmv8_g.c)
+collect (PROJECT_LIB_SOURCES ${CMAKE_SOURCE_DIR}/xarmv8_g.c)
 endif()
 if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexr5") OR
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm"))
