--- a/lib/sw_services/xilfpga/src/CMakeLists.txt
+++ b/lib/sw_services/xilfpga/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.3)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(xilfpga)
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xilfpga.cmake NO_POLICY_SCOPE)
+include(${CMAKE_SOURCE_DIR}/xilfpga.cmake NO_POLICY_SCOPE)
+find_package(common)
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
@@ -21,4 +21,5 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(xilfpga STATIC ${_sources})
 set_target_properties(xilfpga PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS xilfpga LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS xilfpga LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
+install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
