esw: Driver Changes for Rigel support
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8.9)
 project(libxil)
 
 if (${OS_ESW})
-set(common_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../")
+#set(common_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../")
+#set(common_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../")
 find_package(common)
 #include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/common.cmake)
 include_directories(${CMAKE_BINARY_DIR}/include)
