--- a/XilinxProcessorIPLib/drivers/uartlite/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/uartlite/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(uartlite)
 
 set(UARTLITE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -38,4 +38,4 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(uartlite STATIC ${_sources})
 set_target_properties(uartlite PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS uartlite LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+#install(TARGETS uartlite LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
