--- a/lib/sw_services/xiltimer/data/xiltimer.yaml
+++ b/lib/sw_services/xiltimer/data/xiltimer.yaml
@@ -20,4 +20,12 @@ required:
         - reg
     ttcps:
         - reg
+
+depends_libs:
+    - xilffs
+
+lib_config:
+    xilffs:
+        - XILFFS_read_only: ON
+        - XILFFS_use_mkfs : OFF
 ...
