--- a/lib/sw_services/xiltimer/src/CMakeLists.txt
+++ b/lib/sw_services/xiltimer/src/CMakeLists.txt
@@ -3,10 +3,12 @@
 cmake_minimum_required(VERSION 2.8.9)
 project(xiltimer)
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include(${CMAKE_CURRENT_SOURCE_DIR}/XiltimerExample.cmake NO_POLICY_SCOPE)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xiltimer.cmake NO_POLICY_SCOPE)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xiltimer.cmake NO_POLICY_SCOPE)
+include(${CMAKE_SOURCE_DIR}/xiltimer.cmake NO_POLICY_SCOPE)
 
+find_package(common)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
@@ -20,4 +22,5 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(xiltimer STATIC ${_sources})
 set_target_properties(xiltimer PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS xiltimer LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS xiltimer LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
+install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
