--- a/lib/sw_services/xilrsa/src/CMakeLists.txt
+++ b/lib/sw_services/xilrsa/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(xilrsa)
 
+find_package(common)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 
 collect (PROJECT_LIB_HEADERS ${CMAKE_SOURCE_DIR}/include/xilrsa.h)
