--- a/lib/sw_services/xilsem/src/CMakeLists.txt
+++ b/lib/sw_services/xilsem/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(xilsem)
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xilsem.cmake NO_POLICY_SCOPE)
+find_package(common)
+include(${CMAKE_CURRENT_SOURCE_DIR}/xilsem.cmake NO_POLICY_SCOPE)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 
 collect (PROJECT_LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/server/xilsem.h)
