--- a/lib/sw_apps/peripheral_tests/src/CMakeLists.txt
+++ b/lib/sw_apps/peripheral_tests/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include(${CMAKE_CURRENT_SOURCE_DIR}/Peripheral_testsExample.cmake)
 project(executable)
 
+find_package(common)
 enable_language(C ASM)
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
@@ -16,6 +16,6 @@ collector_list (_deps PROJECT_LIB_DEPS)
 LOAD_CACHE("${CMAKE_CURRENT_SOURCE_DIR}")
 
 file(GLOB SOURCES "*.c")
-linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/../../../../scripts/linker_files/")
+linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
 add_executable(executable.elf ${SOURCES})
 target_link_libraries(executable.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
