--- a/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
+++ b/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
@@ -13,6 +13,12 @@ properties:
   interrupts:
     description: Interrupt property of the controller
 
+supported_processors:
+  - psu_cortexa53
+  - psu_cortexr5
+  - psv_cortexa72
+  - psv_cortexr5
+
 depends:
     - emaclite
     - axiethernet
