--- a/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
+++ b/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
@@ -2,17 +2,11 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for ZynqMP PMUFW application
+title: Bindings for Versal PSMFW application
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
 supported_processors:
-  - psu_pmu
-
-depends_libs:
-    - xiltimer
-    - xilfpga
-    - xilsecure
-    - xilskey
+  - psv_psm
 ...
