--- a/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
+++ b/lib/sw_apps/zynqmp_fsbl/src/CMakeLists.txt
@@ -1,11 +1,10 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include_directories(${CMAKE_BINARY_DIR}/include)
-link_directories(${CMAKE_SOURCE_DIR}/../../../../../recipe-sysroot/usr/lib/)
 project(zynqmp_fsbl)
 
+find_package(common)
 enable_language(C ASM)
 collect(PROJECT_LIB_DEPS xilpm)
 collect(PROJECT_LIB_DEPS xil)
