emacps: Add xilinx gem compatible
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/emacps/data/emacps.yaml
+++ b/XilinxProcessorIPLib/drivers/emacps/data/emacps.yaml
@@ -12,6 +12,7 @@ properties:
     OneOf:
       - items:
         - enum:
+          - xlnx,zynqmp-gem
           - cdns,zynqmp-gem
           - cdns,zynq-gem
         - enum:
