psmfw update yaml
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
+++ b/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
@@ -7,6 +7,9 @@ title: Bindings for Versal PSMFW application
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+depends_libs:
+    - xiltimer
+
 supported_processors:
   - psv_psm
 ...
