add versal gem compat strings
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/emacps/data/emacps.yaml
+++ b/XilinxProcessorIPLib/drivers/emacps/data/emacps.yaml
@@ -16,7 +16,9 @@ properties:
           - cdns,zynqmp-gem
           - cdns,zynq-gem
         - enum:
+          - xlnx,versal-gem
           - cdns,versal-gem
+          - cdns,gem
   reg:
     description: Physical base address and size of the controller register map
   dma-coherent:
