freertos echo server updates
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/freertos_lwip_echo_server/src/CMakeLists.txt
+++ b/lib/sw_apps/freertos_lwip_echo_server/src/CMakeLists.txt
@@ -4,7 +4,8 @@ cmake_minimum_required(VERSION 2.8.9)
 include(${CMAKE_CURRENT_SOURCE_DIR}/Freertos_lwip_echo_serverExample.cmake)
 project(freertos_lwip_echo_server)
 
-include(${CMAKE_SOURCE_DIR}/../data/freertos_lwip_echo_server.cmake NO_POLICY_SCOPE)
+find_package(common)
+include(${CMAKE_SOURCE_DIR}/freertos_lwip_echo_server.cmake NO_POLICY_SCOPE)
 enable_language(C ASM)
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
@@ -16,7 +17,13 @@ collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
 SET(SOURCES echo.c;main.c;iic_phyreset.c;)
-linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/../../../../scripts/linker_files/")
+linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
 add_executable(freertos_lwip_echo_server.elf ${SOURCES})
 target_link_libraries(freertos_lwip_echo_server.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 target_include_directories(freertos_lwip_echo_server.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
+if (${OS_ESW})
+   set (INCLUDE_DIRS
+       "${CMAKE_INCLUDE_PATH}/include/"
+       "${CMAKE_BINARY_DIR}/include")
+  target_include_directories(freertos_lwip_echo_server.elf PUBLIC ${INCLUDE_DIRS})
+endif()
