--- a/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
+++ b/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
@@ -13,6 +13,11 @@ properties:
   interrupts:
     description: Interrupt property of the controller
 
+depends_libs:
+    - lwip211
+    - freertos10_xilinx
+    - xiltimer
+
 supported_processors:
   - psu_cortexa53
   - psu_cortexr5
