lib: sw_apps: Add meta data for supported processors and os
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
+++ b/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
@@ -24,6 +24,9 @@ supported_processors:
   - psv_cortexa72
   - psv_cortexr5
 
+supported_os:
+    - freertos10_xilinx
+
 depends:
     - emaclite
     - axiethernet
