--- a/lib/sw_apps/zynqmp_fsbl/data/zynqmp_fsbl.yaml
+++ b/lib/sw_apps/zynqmp_fsbl/data/zynqmp_fsbl.yaml
@@ -11,6 +11,9 @@ supported_processors:
   - psu_cortexa53
   - psu_cortexr5
 
+supported_os:
+  - standalone
+
 depends_libs:
     - xiltimer
     - xilffs
