lib: sw_services: Add meta data for supported processors and os
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_services/xilplmi/data/xilplmi.yaml
+++ b/lib/sw_services/xilplmi/data/xilplmi.yaml
@@ -2,20 +2,14 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for xilnvm library.
+title: Bindings for xilplmi library
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
 supported_processors:
-  - psu_pmc
-  - psu_psm
   - psv_pmc
-  - psv_psm
 
 supported_os:
   - standalone
-
-depends_libs:
-    - xiltimer
-    - xilplmi
+...
