--- a/lib/sw_services/xilpm/data/xilpm.yaml
+++ b/lib/sw_services/xilpm/data/xilpm.yaml
@@ -2,20 +2,20 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for xilnvm library.
+title: Bindings for xilpm library.
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
 supported_processors:
-  - psu_pmc
-  - psu_psm
+  - psu_cortexa53
+  - psu_cortexr5
+  - psv_cortexa72
+  - psv_cortexr5
+  - psu_pmu
   - psv_pmc
   - psv_psm
 
 supported_os:
   - standalone
-
-depends_libs:
-    - xiltimer
-    - xilplmi
+  - freertos10_xilinx
