--- a/lib/sw_services/xilfpga/data/xilfpga.yaml
+++ b/lib/sw_services/xilfpga/data/xilfpga.yaml
@@ -7,6 +7,16 @@ title: Bindings for xilfpga library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+supported_processors:
+  - psu_cortexa53
+  - psu_cortexr5
+  - psv_cortexa72
+  - psv_cortexr5
+
+supported_os:
+  - standalone
+  - freertos10_xilinx
+
 depends_libs:
     - xilsecure
     - xilmailbox
