--- a/lib/sw_services/xilloader/data/xilloader.yaml
+++ b/lib/sw_services/xilloader/data/xilloader.yaml
@@ -2,14 +2,23 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for xilloader library
+title: Bindings for xilloader library.
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+supported_processors:
+  - psu_pmc
+  - psu_psm
+  - psv_pmc
+  - psv_psm
+
+supported_os:
+  - standalone
+
 depends_libs:
-    - xilpm
-    - xilpdi
-    - xilffs
-    - xilsecure
-    - xilpuf
+  - xilpm
+  - xilpdi
+  - xilffs
+  - xilsecure
+  - xilpuf
