--- a/lib/sw_services/xilmailbox/data/xilmailbox.yaml
+++ b/lib/sw_services/xilmailbox/data/xilmailbox.yaml
@@ -13,6 +13,19 @@ properties:
   xlnx,ipi-bitmask:
     description: IPI Bit mask
 
+supported_processors:
+  - psu_cortexa53
+  - psu_cortexr5
+  - psv_cortexa72
+  - psv_cortexr5
+  - psu_pmu
+  - psv_pmc
+  - psv_psm
+
+supported_os:
+  - standalone
+  - freertos10_xilinx
+
 depends:
     - ipipsu
 
