--- a/lib/sw_services/xilpuf/data/xilpuf.yaml
+++ b/lib/sw_services/xilpuf/data/xilpuf.yaml
@@ -7,5 +7,13 @@ title: Bindings for xilpuf library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+supported_processors:
+  - psv_cortexa72
+  - psv_cortexr5
+  - psv_pmc
+
+supported_os:
+  - standalone
+
 depends_libs:
     - xilplmi
