--- a/lib/sw_services/xiltimer/data/xiltimer.yaml
+++ b/lib/sw_services/xiltimer/data/xiltimer.yaml
@@ -11,6 +11,19 @@ properties:
   reg:
     description: Physical base address and size of the controller register map
 
+supported_processors:
+  - psu_cortexa53
+  - psu_cortexr5
+  - psv_cortexa72
+  - psv_cortexr5
+  - psu_pmu
+  - psv_pmc
+  - psv_psm
+
+supported_os:
+  - standalone
+  - freertos10_xilinx
+
 depends:
   - tmrctr
   - ttcps
