xillfs: copy include file to include_path
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_services/xilffs/src/CMakeLists.txt
+++ b/lib/sw_services/xilffs/src/CMakeLists.txt
@@ -18,6 +18,7 @@ collect (PROJECT_LIB_SOURCES ffunicode.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+file(COPY ${CMAKE_BINARY_DIR}/include/xilffs_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/xilffs_config.h)
 add_library(xilffs STATIC ${_sources})
 set_target_properties(xilffs PROPERTIES LINKER_LANGUAGE C)
 install(TARGETS xilffs LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
