lib: sw_apps: Add description for apps
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/empty_application/data/empty_application.yaml
+++ b/lib/sw_apps/empty_application/data/empty_application.yaml
@@ -7,6 +7,8 @@ title: Bindings for empty application
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: A blank C project.
+
 depends_libs:
     - xiltimer
 
