--- a/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
+++ b/lib/sw_apps/versal_psmfw/data/versal_psmfw.yaml
@@ -7,6 +7,8 @@ title: Bindings for Versal PSMFW application
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Processing System Management Unit Firmware for versal.
+
 depends_libs:
     - xiltimer
 
