--- a/lib/sw_apps/empty_application/src/CMakeLists.txt
+++ b/lib/sw_apps/empty_application/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/Empty_applicationExample.cmake)
+include(${CMAKE_SOURCE_DIR}/Empty_applicationExample.cmake)
 project(executable)
 
 find_package(common)
@@ -12,8 +12,6 @@ collect(PROJECT_LIB_DEPS xiltimer)
 collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
-
-LOAD_CACHE("${CMAKE_CURRENT_SOURCE_DIR}")
 
 file(GLOB SOURCES "*.c")
 linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
