--- a/lib/sw_apps/hello_world/data/hello_world.yaml
+++ b/lib/sw_apps/hello_world/data/hello_world.yaml
@@ -7,6 +7,8 @@ title: Bindings for hello world
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Let's say 'Hello World' in C.
+
 supported_processors:
   - psu_cortexa53
   - psu_cortexr5
