--- a/lib/sw_apps/zynqmp_fsbl/data/zynqmp_fsbl.yaml
+++ b/lib/sw_apps/zynqmp_fsbl/data/zynqmp_fsbl.yaml
@@ -7,6 +7,9 @@ title: Bindings for ZynqMP FSBL application
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: |-
+  First Stage Bootloader (FSBL) for Zynq Ultrascale+ MPSoC. The FSBL configures the FPGA with HW bit stream (if it exists) and loads the Operating System (OS) Image or Standalone (SA) Image or 2nd Stage Boot Loader image from the non-volatile memory (NAND/SD/QSPI) to RAM (DDR) and takes A53/R5 out of reset.  It supports multiple partitions, and each partition can be a code image or a bit stream.
+
 supported_processors:
   - psu_cortexa53
   - psu_cortexr5
