--- a/lib/sw_apps/zynqmp_pmufw/data/zynqmp_pmufw.yaml
+++ b/lib/sw_apps/zynqmp_pmufw/data/zynqmp_pmufw.yaml
@@ -7,6 +7,8 @@ title: Bindings for ZynqMP PMUFW application
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Platform Management Unit Firmware for ZynqMP.
+
 supported_processors:
   - psu_pmu
 
