--- a/lib/sw_services/xilloader/data/xilloader.yaml
+++ b/lib/sw_services/xilloader/data/xilloader.yaml
@@ -7,6 +7,8 @@ title: Bindings for xilloader library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Xilinx Versal Platform Loader Library.
+
 supported_processors:
   - psu_pmc
   - psu_psm
