--- a/lib/sw_services/xilpdi/data/xilpdi.yaml
+++ b/lib/sw_services/xilpdi/data/xilpdi.yaml
@@ -7,6 +7,8 @@ title: Bindings for xilffs library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Xilinx Programmable Device Image (PDI) Library.
+
 supported_processors:
   - psu_cortexa53
   - psu_cortexr5
