--- a/lib/sw_services/xilpuf/data/xilpuf.yaml
+++ b/lib/sw_services/xilpuf/data/xilpuf.yaml
@@ -7,6 +7,8 @@ title: Bindings for xilpuf library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Xilinx PUF Library provides interface for registration and regeneration.
+
 supported_processors:
   - psv_cortexa72
   - psv_cortexr5
