--- a/lib/sw_services/xilsecure/data/xilsecure.yaml
+++ b/lib/sw_services/xilsecure/data/xilsecure.yaml
@@ -7,6 +7,8 @@ title: Bindings for xilsecure library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Xilinx Secure Library provides interface to AES, RSA and SHA hardware engines on ZynqMP Soc and Versal.
+
 supported_processors:
   - psu_cortexa53
   - psu_cortexr5
