--- a/lib/sw_services/xilsem/data/xilsem.yaml
+++ b/lib/sw_services/xilsem/data/xilsem.yaml
@@ -7,6 +7,8 @@ title: Bindings for xilsem library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Xilinx Versal Soft Error Mitigation Library.
+
 supported_processors:
   - psv_cortexr5
   - psv_pmc
