--- a/lib/sw_services/xilskey/data/xilskey.yaml
+++ b/lib/sw_services/xilskey/data/xilskey.yaml
@@ -7,6 +7,8 @@ title: Bindings for xilskey library.
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Xilinx Secure Key Library supports programming efuse and bbram.
+
 supported_processors:
   - psu_cortexa53
   - psu_cortexr5
