--- a/lib/sw_services/xiltimer/data/xiltimer.yaml
+++ b/lib/sw_services/xiltimer/data/xiltimer.yaml
@@ -2,10 +2,12 @@
 # SPDX-License-Identifier: MIT
 %YAML 1.2
 ---
-title: Bindings for lwip library
+title: Bindings for xiltimer library
 
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
+
+description: Xiltimer library provides generic timer interface for the timer IP's.
 
 properties:
   reg:
