--- a/XilinxProcessorIPLib/drivers/axicdma/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/axicdma/src/CMakeLists.txt
@@ -21,6 +21,8 @@ collect (PROJECT_LIB_HEADERS xaxicdma_hw.h)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (NOT ${OS_ESW})
 add_library(axicdma STATIC ${_sources})
 set_target_properties(axicdma PROPERTIES LINKER_LANGUAGE C)
-#install(TARGETS axicdma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS axicdma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
