--- a/XilinxProcessorIPLib/drivers/axipmon/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/axipmon/src/CMakeLists.txt
@@ -16,6 +16,8 @@ collect (PROJECT_LIB_SOURCES xaxipmon_sinit.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (NOT ${OS_ESW})
 add_library(axipmon STATIC ${_sources})
 set_target_properties(axipmon PROPERTIES LINKER_LANGUAGE C)
-#install(TARGETS axipmon LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS axipmon LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
