--- a/XilinxProcessorIPLib/drivers/axivdma/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/axivdma/src/CMakeLists.txt
@@ -20,6 +20,8 @@ collect (PROJECT_LIB_SOURCES xaxivdma_sinit.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (NOT ${OS_ESW})
 add_library(axivdma STATIC ${_sources})
 set_target_properties(axivdma PROPERTIES LINKER_LANGUAGE C)
-#install(TARGETS axivdma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS axivdma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
