--- a/XilinxProcessorIPLib/drivers/canps/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/canps/src/CMakeLists.txt
@@ -1,7 +1,6 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
-cmake_minimum_required(VERSION 2.8.9)
-#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
+cmake_minimum_required(VERSION 3.15)
 project(canps)
 
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -18,6 +17,8 @@ collect (PROJECT_LIB_SOURCES xcanps_sinit.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (NOT ${OS_ESW})
 add_library(canps STATIC ${_sources})
 set_target_properties(canps PROPERTIES LINKER_LANGUAGE C)
-#install(TARGETS canps LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS canps LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
