--- a/XilinxProcessorIPLib/drivers/cfupmc/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/cfupmc/src/CMakeLists.txt
@@ -17,6 +17,8 @@ collect (PROJECT_LIB_SOURCES xcfupmc_sinit.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (NOT ${OS_ESW})
 add_library(cfupmc STATIC ${_sources})
 set_target_properties(cfupmc PROPERTIES LINKER_LANGUAGE C)
-#install(TARGETS cfupmc LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS cfupmc LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
