--- a/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
@@ -30,6 +30,8 @@ collect (PROJECT_LIB_SOURCES xinterrupt_wrap.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (NOT ${OS_ESW})
 add_library(common STATIC ${_sources})
 set_target_properties(common PROPERTIES LINKER_LANGUAGE C)
 #install(TARGETS common LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
