--- a/XilinxProcessorIPLib/drivers/tmr_inject/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/tmr_inject/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.15)
 #include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(tmr_inject)
 
@@ -17,6 +17,8 @@ collect (PROJECT_LIB_SOURCES xtmr_inject_sinit.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (NOT ${OS_ESW})
 add_library(tmr_inject STATIC ${_sources})
 set_target_properties(tmr_inject PROPERTIES LINKER_LANGUAGE C)
-#install(TARGETS tmr_inject LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS tmr_inject LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
