--- a/lib/sw_services/xilrsa/src/CMakeLists.txt
+++ b/lib/sw_services/xilrsa/src/CMakeLists.txt
@@ -6,7 +6,7 @@ project(xilrsa)
 find_package(common)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 
-collect (PROJECT_LIB_HEADERS ${CMAKE_SOURCE_DIR}/include/xilrsa.h)
+collect (PROJECT_LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/xilrsa.h)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/librsa.a ${CMAKE_BINARY_DIR}/libxilrsa.a)
