--- a/lib/sw_services/xilmailbox/src/CMakeLists.txt
+++ b/lib/sw_services/xilmailbox/src/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_minimum_required(VERSION 2.8.9)
 project(xilmailbox)
 
 find_package(common)
+include(${CMAKE_CURRENT_SOURCE_DIR}/xilmailbox.cmake NO_POLICY_SCOPE)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
@@ -14,6 +15,7 @@ collect (PROJECT_LIB_HEADERS xilmailbox.h)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+file(COPY ${CMAKE_BINARY_DIR}/include/xilmailbox_hwconfig.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xilmailbox STATIC ${_sources})
 set_target_properties(xilmailbox PROPERTIES LINKER_LANGUAGE C)
 #install(TARGETS xilmailbox LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
