--- a/lib/sw_services/xilpm/src/CMakeLists.txt
+++ b/lib/sw_services/xilpm/src/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8.9)
 project(xilpm)
 
 find_package(common)
-include(${CMAKE_SOURCE_DIR}/xilpm.cmake NO_POLICY_SCOPE)
+include(${CMAKE_CURRENT_SOURCE_DIR}/xilpm.cmake NO_POLICY_SCOPE)
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
@@ -18,6 +18,7 @@ endif()
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+file(COPY ${CMAKE_BINARY_DIR}/include/xpm_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xilpm STATIC ${_sources})
 set_target_properties(xilpm PROPERTIES LINKER_LANGUAGE C)
 install(TARGETS xilpm LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
