--- a/lib/sw_services/xiltimer/src/CMakeLists.txt
+++ b/lib/sw_services/xiltimer/src/CMakeLists.txt
@@ -6,7 +6,7 @@ project(xiltimer)
 #include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include(${CMAKE_CURRENT_SOURCE_DIR}/XiltimerExample.cmake NO_POLICY_SCOPE)
 #include(${CMAKE_CURRENT_SOURCE_DIR}/../data/xiltimer.cmake NO_POLICY_SCOPE)
-include(${CMAKE_SOURCE_DIR}/xiltimer.cmake NO_POLICY_SCOPE)
+include(${CMAKE_CURRENT_SOURCE_DIR}/xiltimer.cmake NO_POLICY_SCOPE)
 
 find_package(common)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -20,6 +20,7 @@ collect (PROJECT_LIB_HEADERS xiltimer.h)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+file(COPY ${CMAKE_BINARY_DIR}/include/xtimer_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xiltimer STATIC ${_sources})
 set_target_properties(xiltimer PROPERTIES LINKER_LANGUAGE C)
 install(TARGETS xiltimer LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
