Fix xilmailbox cmake inclusion
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_services/xilmailbox/src/CMakeLists.txt
+++ b/lib/sw_services/xilmailbox/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
 #include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
+include(${CMAKE_CURRENT_SOURCE_DIR}/XilmailboxExample.cmake NO_POLICY_SCOPE)
 project(xilmailbox)
 
 find_package(common)
