esw: Add support for clean target in libraries
This commit adds support for clean target in libraries.

Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_services/xilplmi/src/CMakeLists.txt
+++ b/lib/sw_services/xilplmi/src/CMakeLists.txt
@@ -56,5 +56,7 @@ file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 file(COPY ${CMAKE_BINARY_DIR}/include/xilplmi_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xilplmi STATIC ${_sources})
 set_target_properties(xilplmi PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilplmi PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilplmi.a;${CMAKE_INCLUDE_PATH}/xilplmi_config.h;${clean_headers}")
 install(TARGETS xilplmi LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
