--- a/lib/sw_services/xilsem/src/CMakeLists.txt
+++ b/lib/sw_services/xilsem/src/CMakeLists.txt
@@ -16,5 +16,7 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/ser
 #execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/libxilsem.a) ${CMAKE_LIBRARY_PATH}/libxilsem.a)
 #install(FILES ${CMAKE_BINARY_DIR}/libxilsem.a LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 #install(TARGETS xilsem LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
+get_headers(${_headers})
+set_target_properties(xilsem PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilsem.a;${CMAKE_INCLUDE_PATH}/xilsem_config.h;${clean_headers}")
 file(COPY ${CMAKE_BINARY_DIR}/libxilsem.a DESTINATION ${CMAKE_LIBRARY_PATH} FOLLOW_SYMLINK_CHAIN)
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
