--- a/lib/sw_services/xilffs/src/CMakeLists.txt
+++ b/lib/sw_services/xilffs/src/CMakeLists.txt
@@ -21,5 +21,7 @@ file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 file(COPY ${CMAKE_BINARY_DIR}/include/xilffs_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xilffs STATIC ${_sources})
 set_target_properties(xilffs PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilffs PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilffs.a;${CMAKE_INCLUDE_PATH}/xilffs_config.h;${clean_headers}")
 install(TARGETS xilffs LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
