--- a/lib/sw_services/xilfpga/src/CMakeLists.txt
+++ b/lib/sw_services/xilfpga/src/CMakeLists.txt
@@ -22,5 +22,7 @@ file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 file(COPY ${CMAKE_BINARY_DIR}/include/xfpga_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xilfpga STATIC ${_sources})
 set_target_properties(xilfpga PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilfpga PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilfpga.a;${CMAKE_INCLUDE_PATH}/xfpga_config.h;${clean_headers}")
 install(TARGETS xilfpga LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
