--- a/lib/sw_services/xilloader/src/CMakeLists.txt
+++ b/lib/sw_services/xilloader/src/CMakeLists.txt
@@ -36,5 +36,7 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(xilloader STATIC ${_sources})
 set_target_properties(xilloader PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilloader PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilloader.a;${clean_headers}")
 install(TARGETS xilloader LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
