--- a/lib/sw_services/xilmailbox/src/CMakeLists.txt
+++ b/lib/sw_services/xilmailbox/src/CMakeLists.txt
@@ -19,6 +19,8 @@ file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 file(COPY ${CMAKE_BINARY_DIR}/include/xilmailbox_hwconfig.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xilmailbox STATIC ${_sources})
 set_target_properties(xilmailbox PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilmailbox PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilmailbox.a;${CMAKE_INCLUDE_PATH}/xilmailbox_hwconfig.h;${clean_headers}")
 #install(TARGETS xilmailbox LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(TARGETS xilmailbox LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
