--- a/lib/sw_services/xilnvm/src/CMakeLists.txt
+++ b/lib/sw_services/xilnvm/src/CMakeLists.txt
@@ -19,5 +19,7 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(xilnvm STATIC ${_sources})
 set_target_properties(xilnvm PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilnvm PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilnvm.a;${clean_headers}")
 install(TARGETS xilnvm LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
