--- a/lib/sw_services/xilpdi/src/CMakeLists.txt
+++ b/lib/sw_services/xilpdi/src/CMakeLists.txt
@@ -14,5 +14,7 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(xilpdi STATIC ${_sources})
 set_target_properties(xilpdi PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilpdi PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilpdi.a;${clean_headers}")
 install(TARGETS xilpdi LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
