--- a/lib/sw_services/xilpuf/src/CMakeLists.txt
+++ b/lib/sw_services/xilpuf/src/CMakeLists.txt
@@ -24,5 +24,7 @@ collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_library(xilpuf STATIC ${_sources})
 set_target_properties(xilpuf PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilpuf PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilpuf.a;${clean_headers}")
 install(TARGETS xilpuf LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
