--- a/lib/sw_services/xilskey/src/CMakeLists.txt
+++ b/lib/sw_services/xilskey/src/CMakeLists.txt
@@ -43,5 +43,7 @@ file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 file(COPY ${CMAKE_BINARY_DIR}/include/xilskey_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
 add_library(xilskey STATIC ${_sources})
 set_target_properties(xilskey PROPERTIES LINKER_LANGUAGE C)
+get_headers(${_headers})
+set_target_properties(xilskey PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilskey.a;${CMAKE_INCLUDE_PATH}/xilskey_config.h;${clean_headers}")
 install(TARGETS xilskey LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
